--- a/primjer22.html
+++ b/primjer22.html
@@ -1,3 +1,18 @@
+<div class="VanjskaGrupacija">
+  <div class="Medju">
+    <table class="Tabla">
+      <tr>
+        <th colspan="3" class="GlNas">Udio helija u mineralima</th>
+      </tr>
+      <tr>
+        <td style="border-left: none; border-right: none;">Ne postoje minerali plemenitih plinova! tragovi manji od 0,02 L dobiveni su iz klevejita</td>
+      </tr>
+    </table>
+  </div>
+  
+</div>
+</div>
+
 <!DOCTYPE html>
 <html>
   <head>
